# Messy2JSON

./: .gitignore  README.md  pyproject.toml
messy2json/: __init__.py  main.py
